testing/tests/ui/let_destructuring_has_rest.stderr
error: the previous template error derives from
 --> tests/ui/let_destructuring_has_rest.rs:9:12
  |
9 | #[template(source = "
  |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/let_destructuring_has_rest.rs:17:12
   |
17 | #[template(source = "
   |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/let_destructuring_has_rest.rs:25:12
   |
25 | #[template(source = "
   |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/let_destructuring_has_rest.rs:33:12
   |
33 | #[template(source = "
   |            ^^^^^^

error: the previous template error derives from
  --> tests/ui/let_destructuring_has_rest.rs:41:12
   |
41 | #[template(source = "
   |            ^^^^^^
